# docker-demo

./: .gitignore  docker-compose.yaml
flaskdemo/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
reactdemo/: Dockerfile  package-lock.json  package.json
reactdemo/src/: App.js
